<resources>
    <string name="app_name">GeoVax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="IDamb">
        <item>amb0</item>
        <item>amb2</item>
        <item>amb3</item>
        <item>amb4</item>
        <item>amb5</item>
    </string-array>
    <string-array name="vaccines">
        <item>Sputnik V</item>
        <item>Sinovac-CoronaVac</item>
        <item>AstraZeneka</item>
        <item>Johnson &amp; Johnson</item>
    </string-array>

    <string-array name="nombre">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_adminmenu">adminmenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="jj">Johnson</string>
    <string name="sp">Sputnik V</string>
    <string name="sino">Sinovac</string>
    <string name="astra">AstraZeneka</string>

    <string name="d3si">3 doses</string>
    <string name="d2asp">2 doses</string>
    <string name="d1j">1 doses</string>

    <string name="esi">Efficacité: 51%</string>
    <string name="esp">Efficacité: 91,6%</string>
    <string name="ej">Efficacité:  6,9%</string>
    <string name="ea">Efficacité: 76%</string>

    <string name="osp">Origine: Russie</string>
    <string name="oa">Origine: Suédo-Britannique</string>
    <string name="osi">Origine: Chine</string>
    <string name="oj">Origine: Etats-Unis</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>