<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cst">
        <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:id="@+id/notif"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/none"
        android:src="@drawable/ic_outline_notifications_24"
        tools:ignore="MissingConstraints">
    </ImageButton>
    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/wlcm"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/notif"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bienvenue!"
            android:textSize="35dp"
            android:paddingLeft="20dp"
            android:shadowColor="@color/bleufoncé"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/bleufoncé"
           ></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vaccination rapide et efficace "
            android:layout_gravity="top"
            android:textSize="18dp"
            android:paddingLeft="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/bleufoncé"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:alpha="0.54"
            android:paddingBottom="5dp"
            ></TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.32"
        android:id="@+id/divmenu"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/wlcm"
        android:background="@drawable/bouteillecov"
        >
        <LinearLayout
            android:id="@+id/gch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            >
            <ImageButton
                android:id="@+id/gauche"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/none"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_navigate_before_24"></ImageButton>
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/scrl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/rght"
            android:layout_toEndOf="@+id/gch"
            android:scrollbarSize="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/rght"
                android:layout_toEndOf="@+id/gch"
                android:orientation="horizontal"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="90dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/sino"
                        android:textColor="@color/black"
                        android:textSize="35dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/d3si"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/esi"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/osi"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="90dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/sp"
                        android:textColor="@color/black"
                        android:textSize="35dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/d2asp"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/esp"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/osp"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="90dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/jj"
                        android:textColor="@color/black"
                        android:textSize="35dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/d1j"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/ej"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/oj"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="70dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/astra"
                        android:textColor="@color/black"
                        android:textSize="35dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/d2asp"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/ea"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_light"
                        android:padding="2dp"
                        android:text="@string/oa"
                        android:textColor="@color/black"
                        android:textSize="18dp"></TextView>


                </LinearLayout>
            </LinearLayout>


        </HorizontalScrollView>
        <LinearLayout
            android:id="@+id/rght"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageButton
                android:id="@+id/droite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/none"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_navigate_next_24"></ImageButton>
        </LinearLayout>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/divmenu"
    android:layout_height="0dp"
  >
    <Button
        android:id="@+id/profil"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        android:text="Profil"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:drawableLeft="@drawable/personblance"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:background="@drawable/bouton"
        />
    <Button
        android:id="@+id/rdv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_outline_calendar_today_24"
        android:layout_marginTop="20dp"
        android:text="Rendez-vous"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:background="@drawable/bouton"
        />
    <Button
        android:id="@+id/prevention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_baseline_coronavirus_24"
        android:text="Prevention covid"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:background="@drawable/bouton"
        />
    <Button
        android:id="@+id/numvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        android:layout_marginVertical="20dp"
        android:text="Numero vert"
        android:textAlignment="center"
        android:drawableLeft="@drawable/phoneicon"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/bleufoncé"
        android:textSize="16dp"
        android:background="@drawable/bouton2"
        />

</LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>